[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvp-db"
version = "0.1.0"
description = "SQLAlchemy models for the Human Virome Project database"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy~=2.0"
]

[project.scripts]
hvp-db = "hvp_db.cli:main"
