[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvp-db"
version = "0.1.0"
description = "UPenn Human Virome Project sample database"
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy~=2.0"
]

[project.optional-dependencies]
web = [
    "Flask~=2.0",
    "flask_sqlalchemy~=3.1",
    "gunicorn",
]

[project.scripts]
hvp-db = "hvp_db.cli:main"
